--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,7 @@ jobs:
             herculesgabriel/rotten-potatoes:latest
             herculesgabriel/rotten-potatoes:${{ github.run_number }}
   CD:
+    needs: [CI]
     runs-on: ubuntu-latest
 
     steps:
